dataset1235/2025-2/2947369575/users/2898291405/executions/1003782500_704983377.log
== SUBMISSION (2025-08-27 16:29:26)
-- CODE: 
x = int(input("Entre com o valor de x: "))
y = int(input("Entre com o valor de y: "))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 16:30:14)
-- CODE: 
x = int(input("Entre com o valor de x:346"))
y = int(input("Entre com o valor de y:2"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 16:44:35)
-- CODE: 
x = int(input("Entre com o valor de X:"))
y = int(input("Entre com o valor de Y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 16:27:29)
-- CODE: 
x = int(input("Entre com o valor de x:"))
y = int(input("entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 16:26:41)
-- CODE: 
x = int(input("Entre com o valor de x:"))
y = int(input("entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 16:29:33)
-- CODE: 
x = int(input("Entre com o valor de x: "))
y = int(input("Entre com o valor de y: "))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 16:44:38)
-- CODE: 
x = int(input("Entre com o valor de X:"))
y = int(input("Entre com o valor de Y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 16:29:37)
-- CODE: 
x = int(input("Entre com o valor de x: "))
y = int(input("Entre com o valor de y: "))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 16:30:26)
-- CODE: 
x = int(input("Entre com o valor de x:346"))
y = int(input("Entre com o valor de y:2"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 16:31:55)
-- CODE: 
x = int(input("Entre com o valor de x:"))
y = int(input("Entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 16:31:58)
-- CODE: 
x = int(input("Entre com o valor de x:"))
y = int(input("Entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 16:29:19)
-- CODE: 
x = int(input("Entre com o valor de x:"))
y = int(input("Entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 16:29:05)
-- CODE: 
x = int(input("Entre com o valor de x:"))
y = int(input("Entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 16:29:48)
-- CODE: 
x = int(input("Entre com o valor de x: "))
y = int(input("Entre com o valor de y: "))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 16:30:39)
-- CODE: 
x = int(input("Entre com o valor de x:"))
y = int(input("Entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 16:31:52)
-- CODE: 
x = int(input("Entre com o valor de x:"))
y = int(input("Entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 16:24:09)
-- CODE: 
x = int(input("Entre com o valor de x:"))
y = int(input("entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 16:30:18)
-- CODE: 
x = int(input("Entre com o valor de x:346"))
y = int(input("Entre com o valor de y:2"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 17:55:19)
-- CODE: 
X = int(input("Entre com o valor de X:"))
Y = int(input("Entre com o valor de Y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 16:43:25)
-- CODE: 
x = int(input("Entre com o valor de x:"))
y = int(input("Entre com o valor de y:"))
Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3
print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 16:27:12)
-- CODE: 
x = int(input("Entre com o valor de x:"))
y = int(input("entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 16:24:25)
-- CODE: 
x = int(input("Entre com o valor de x:"))
y = int(input("entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 16:29:31)
-- CODE: 
x = int(input("Entre com o valor de x: "))
y = int(input("Entre com o valor de y: "))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 16:44:37)
-- CODE: 
x = int(input("Entre com o valor de X:"))
y = int(input("Entre com o valor de Y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 16:28:57)
-- CODE: 
x = int(input("Entre com o valor de x:"))
y = int(input("Entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 16:44:49)
-- CODE: 
x = int(input("Entre com o valor de X:"))
y = int(input("Entre com o valor de Y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 16:31:33)
-- CODE: 
x = int(input("Entre com o valor de x:"))
y = int(input("Entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 16:24:26)
-- CODE: 
x = int(input("Entre com o valor de x:"))
y = int(input("entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 16:32:01)
-- CODE: 
x = int(input("Entre com o valor de x:"))
y = int(input("Entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 16:31:29)
-- CODE: 
x = int(input("Entre com o valor de x:"))
y = int(input("Entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 16:44:32)
-- CODE: 
x = int(input("Entre com o valor de X:"))
y = int(input("Entre com o valor de Y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q1 = X // Y
         ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 17:55:45)
-- CODE: 
X = int(input("Entre com o valor de X:"))
Y = int(input("Entre com o valor de Y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 17:55:27)
-- CODE: 
X = int(input("Entre com o valor de X:"))
Y = int(input("Entre com o valor de Y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
